--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html " style="color: #ff0000;">Tom Lambert</a></h1>
+      <h1><a href="index.html " style="color: #ff0000;"><u>Tom Lambert</u></a></h1>
       <h2><span><i class="icon fas fa-medkit text-red"></i>      Sapeur-Pompier Volontaire     </span></h2>
 
       <nav id="navbar" class="navbar">
