--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title"><u>Expériences Professionelles</u></h3>
-          <div class="resume-item">
-            <h5>Juin 2022 à Septembre 2022</h5>
-          <h4><u>Technicien informatique mobile</u></h4>
-            <p><em>Chez Phonexpress42, Saint-Just-Saint-Rambert, 42170.</em></p>
-            <img id="logophone" src="assets/img/phonexpress42.jpg">
-          </div>
+           <div class="resume-item">
+          <h5>Mai 2019</h5>
+          <h4><u>Stage découverte de la caserne des pompiers</u></h4>
+        <p><em>à Andrézieux-Bouthéon, 42160.</em></p>
+        <img id="sapeur" src="assets/img/caserne.png">
+        </divW
           <div class="resume-item">
             <h5>Octobre 2021 à Août 2022</h5>
             <h4><u>Equipier polyvalent en restauration rapide</u></h4>
@@ -290,11 +290,11 @@
           <img id="ldlc" src="assets/img/ldlc.png">
         </div>
         <div class="resume-item">
-          <h5>Mai 2019</h5>
-          <h4><u>Stage découverte de la caserne des pompiers</u></h4>
-        <p><em>à Andrézieux-Bouthéon, 42160.</em></p>
-        <img id="sapeur" src="assets/img/caserne.png">
-      </div>
+            <h5>Juin 2022 à Septembre 2022</h5>
+          <h4><u>Technicien informatique mobile</u></h4>
+            <p><em>Chez Phonexpress42, Saint-Just-Saint-Rambert, 42170.</em></p>
+            <img id="logophone" src="assets/img/phonexpress42.jpg">
+        </div>
         </div>
           </div>
   </div>
