--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
           <h3 class="resume-title"><u>Expériences Professionelles</u></h3>
            <div class="resume-item">
           <h5>Mai 2019</h5>
-          <h4><u>Stage découverte de la caserne des pompiers</u></h4>
+          <h4><u>Sapeur Pompier Volontaire</u></h4>
         <p><em>à Andrézieux-Bouthéon, 42160.</em></p>
         <img id="sapeur" src="assets/img/caserne.png">
-        </divW
+          </div>
           <div class="resume-item">
             <h5>Octobre 2021 à Août 2022</h5>
             <h4><u>Equipier polyvalent en restauration rapide</u></h4>
