--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <p><em>Au CFAI de la loire / Alternance au service informatique de l'Hôpital Nord
             à Saint-Etienne.</em></p></p>
             <img id="logophone" src="assets/img/cfai.png">
-            <img id="chu" src="assets/img/téléchargement.png">
+            <img id="chu" src="assets/img/chu.png">
             </div>
             <div class="resume-item">
               <h5>2022</h5>
