--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i Raleway:300,300i,400,400i,500,500i,600,600i,700,700i Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -173,7 +173,7 @@
     <div class="interests container">
     <div class="section-title">
         <h2>Centres d'Intérêt</h2>
-      </div>
+    </div>
 
       <div class="row">
         <div class="col-lg-3 col-md-4">
@@ -226,6 +226,7 @@
         </div>
     </div><!-- End Interests -->
 
+  </section>
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -242,10 +243,9 @@
           <div class="resume-item">
             <p><u><h5>En cours</h5></u>
             <h4><u>BTS SIO option SISR</u></h4>
-            <p><em>Au CFAI de la loire / Alternance au service informatique de l'Hôpital Nord
-            à Saint-Etienne.</em></p></p>
+            <p><em>Au CFAI de la loire / Alternance au service informatique de l'Hôpital Nord à Saint-Etienne.</em></p>
             <img id="logophone" src="assets/img/cfai.png">
-            <img id="chu" src="assets/img/chulogo.png">
+            <img id="chu" src="assets/img/chu.png">
             </div>
             <div class="resume-item">
               <h5>2022</h5>
@@ -270,7 +270,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title"><u>Expériences Professionelles</u></h3>
            <div class="resume-item">
-          <h5>Décembre 2022</h5>
+          <h5>Mai 2019</h5>
           <h4><u>Sapeur Pompier Volontaire</u></h4>
         <p><em>à Andrézieux-Bouthéon, 42160.</em></p>
         <img id="sapeur" src="assets/img/caserne.png">
