--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700iRaleway:300,300i,400,400i,500,500i,600,600i,700,700iPoppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -225,7 +225,6 @@
           </div>
         </div>
     </div><!-- End Interests -->
-
   </section>
 
   <!-- ======= Resume Section ======= -->
@@ -241,7 +240,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title"><u>Etudes & Formation</u></h3>
           <div class="resume-item">
-            <p><u><h5>En cours</h5></u>
+            <u><h5>En cours</h5></u>
             <h4><u>BTS SIO option SISR</u></h4>
             <p><em>Au CFAI de la loire / Alternance au service informatique de l'Hôpital Nord à Saint-Etienne.</em></p>
             <img id="logophone" src="assets/img/cfai.png">
