--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
     <div class="interests container">
     <div class="section-title">
         <h2>Centres d'Intérêt</h2>
-    </div>
 
       <div class="row">
         <div class="col-lg-3 col-md-4">
@@ -224,8 +223,10 @@
             <h3>Développement</h3>
           </div>
         </div>
+      </div>
     </div><!-- End Interests -->
-  </section>
+  
+   </section>
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -269,7 +270,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title"><u>Expériences Professionelles</u></h3>
            <div class="resume-item">
-          <h5>Mai 2019</h5>
+          <h5>Septembre 2022</h5>
           <h4><u>Sapeur Pompier Volontaire</u></h4>
         <p><em>à Andrézieux-Bouthéon, 42160.</em></p>
         <img id="sapeur" src="assets/img/caserne.png">
