--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
         </div>
       </div>
     </div><!-- End Interests -->
-  
-   </section>
+    </section>
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -241,30 +240,30 @@
         <div class="col-lg-6">
           <h3 class="resume-title"><u>Etudes & Formation</u></h3>
           <div class="resume-item">
-            <u><h5>En cours</h5></u>
+            <h5>En cours</h5>
             <h4><u>BTS SIO option SISR</u></h4>
             <p><em>Au CFAI de la loire / Alternance au service informatique de l'Hôpital Nord à Saint-Etienne.</em></p>
-            <img id="logophone" src="assets/img/cfai.png">
-            <img id="chu" src="assets/img/chu.png">
+            <img id="logophone" src="assets/img/cfai.png" alt="">
+            <img id="chu" src="assets/img/chu.png" alt="">
             </div>
             <div class="resume-item">
               <h5>2022</h5>
               <h4><u>Brevet National de sécurité et de sauvetage aquatique.</u></h4>
             <p>(BNSSA et PSE1)</p>
             <p><em>Sauveteurs Secouristes de BONSON.</em></p>
-            <img id="logophone" src="assets/img/bonson.jpg">
+            <img id="logophone" src="assets/img/bonson.jpg" alt="">
           </div>
           <div class="resume-item ">
             <h5>2021</h5>
             <h4><u>Baccalauréat Professionnel en Réseaux Informatiques et systèmes communiquants.</u></h4>
             <p><em>Au Lycée Pierre Desgranges, à Andrézieux-Bouthéon, 42160.</em></p>
-            <img id="bac" src="assets/img/bac.jpg">
+            <img id="bac" src="assets/img/bac.jpg"alt="">
           </div>
           <div class="resume-item ">
             <h5>2019</h5>
             <h4><u>Diplôme National du Brevet</u></h4>
             <p><em>Au collège Anne Frank, à Saint-Just-Saint-Rambert, 42170.</em></p>
-            <img id="brevet" src="assets/img/brevet.png">
+            <img id="brevet" src="assets/img/brevet.png"alt="">
           </div>
         </div>
         <div class="col-lg-6">
@@ -273,25 +272,25 @@
           <h5>Septembre 2022</h5>
           <h4><u>Sapeur Pompier Volontaire</u></h4>
         <p><em>à Andrézieux-Bouthéon, 42160.</em></p>
-        <img id="sapeur" src="assets/img/caserne.png">
+        <img id="sapeur" src="assets/img/caserne.png"alt="">
           </div>
           <div class="resume-item">
             <h5>Octobre 2021 à Août 2022</h5>
             <h4><u>Equipier polyvalent en restauration rapide</u></h4>
           <p><em>Chez Mcdonald's à Andrézieux-Bouthéon.</em></p>
-          <img id="logophone" src="assets/img/mcdo.png">
+          <img id="logophone" src="assets/img/mcdo.png"alt="">
         </div>
           <div class="resume-item">
             <h5>Avril 2020</h5>
             <h4><u>Technicien Informatique</u></h4>
           <p><em>Chez LDLC à Saint-Etienne, 42000.</em></p>
-          <img id="ldlc" src="assets/img/ldlc.png">
+          <img id="ldlc" src="assets/img/ldlc.png"alt="">
         </div>
         <div class="resume-item">
             <h5>Juin 2022 à Septembre 2022</h5>
           <h4><u>Technicien informatique mobile</u></h4>
             <p><em>Chez Phonexpress42, Saint-Just-Saint-Rambert, 42170.</em></p>
-            <img id="logophone" src="assets/img/phonexpress42.jpg">
+            <img id="logophone" src="assets/img/phonexpress42.jpg"alt="">
         </div>
         </div>
           </div>
@@ -309,13 +308,13 @@
 
       <div class="row">
         <div class="col-lg-6 d-flex">
-          <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey">
+          <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"alt="">
           <div class="icon-box">
-            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey">
+            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"alt="">
             <div class="icon"><i class="fas fa-car"></i></div>
-            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey">
+            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"alt="">
             <h4>Permis de conduire</a></h4>
-            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey">
+            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"alt="">
             <p>Possesion d'une BMW série 3</p>
             </a>
           </form>
@@ -323,13 +322,13 @@
       </div>
 
         <div class="col-lg-6 d-flex">
-          <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
+          <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique"alt="">
           <div class="icon-box">
-            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
+            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique"alt="">
             <div class="icon"><i class="fas fa-life-ring"></i></div>
-            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
+            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique"alt="">
             <h4>BNSSA</a></h4>
-            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
+            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique"alt="">
             <p>Sauveteur Secouriste Aquatique</p>
             </a>
             </form>
