--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div><!-- End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+   <div class="interests container">
     <div class="section-title">
         <h2>Centres d'Intérêt</h2>
 
@@ -225,7 +225,9 @@
         </div>
       </div>
     </div><!-- End Interests -->
-    </section>
+   </div>
+  </section>
+
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -243,7 +245,7 @@
             <h5>En cours</h5>
             <h4><u>BTS SIO option SISR</u></h4>
             <p><em>Au CFAI de la loire / Alternance au service informatique de l'Hôpital Nord à Saint-Etienne.</em></p>
-            <img id="logophone" src="assets/img/cfai.png" alt="">
+            <img id="cfai" src="assets/img/cfai.png" alt="">
             <img id="chu" src="assets/img/chu.png" alt="">
             </div>
             <div class="resume-item">
@@ -251,7 +253,7 @@
               <h4><u>Brevet National de sécurité et de sauvetage aquatique.</u></h4>
             <p>(BNSSA et PSE1)</p>
             <p><em>Sauveteurs Secouristes de BONSON.</em></p>
-            <img id="logophone" src="assets/img/bonson.jpg" alt="">
+            <img id="bonson" src="assets/img/bonson.jpg" alt="">
           </div>
           <div class="resume-item ">
             <h5>2021</h5>
@@ -278,7 +280,7 @@
             <h5>Octobre 2021 à Août 2022</h5>
             <h4><u>Equipier polyvalent en restauration rapide</u></h4>
           <p><em>Chez Mcdonald's à Andrézieux-Bouthéon.</em></p>
-          <img id="logophone" src="assets/img/mcdo.png" alt="">
+          <img id="macdo" src="assets/img/mcdo.png" alt="">
         </div>
           <div class="resume-item">
             <h5>Avril 2020</h5>
@@ -290,7 +292,7 @@
             <h5>Juin 2022 à Septembre 2022</h5>
           <h4><u>Technicien informatique mobile</u></h4>
             <p><em>Chez Phonexpress42, Saint-Just-Saint-Rambert, 42170.</em></p>
-            <img id="logophone" src="assets/img/phonexpress42.jpg" alt="">
+            <img id="tel" src="assets/img/phonexpress42.jpg" alt="">
         </div>
         </div>
           </div>
