--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
       </div>
 
         <div class="col-lg-6 d-flex">
-          <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique" alt="">
+          <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
           <div class="icon-box">
-            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique" alt="">
+            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
             <div class="icon"><i class="fas fa-life-ring"></i></div>
-            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique" alt="">
+            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
             <h4>BNSSA</a></h4>
-            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique" alt="">
+            <a href="https://fr.wikipedia.org/wiki/Brevet_national_de_s%C3%A9curit%C3%A9_et_de_sauvetage_aquatique">
             <p>Sauveteur Secouriste Aquatique</p>
             </a>
             </form>
