--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
             <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"></a>
             <p>Possesion d'une BMW série 3</p>
             </a>
+          </div>
           </form>
         </div>
       </div>
