--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="icon-box">
             <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"></a>
             <div class="icon"><i class="fas fa-car"></i></div>
-            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"></a>
+            <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey">
             <h4>Permis de conduire</a></h4>
             <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"></a>
             <p>Possesion d'une BMW série 3</p>
@@ -335,8 +335,9 @@
             <p>Sauveteur Secouriste Aquatique</p>
             </a>
             </form>
+          </div>
         </div>
-      </div>
+     </div>
 </div>
   </section><!-- End Services Section -->
 
