--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -317,8 +317,7 @@
             <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey">
             <h4>Permis de conduire</h4></a>
             <a href="https://glenshelly.com/sales/sold-full/2004-bmw-m3-silver-grey"></a>
-            <p>Possesion d'une BMW série 3</p>
-            </a>
+            <p>Possesion d'une BMW série 3</p></a>
           </div>
           </form>
         </div>
